017-network-policies/more/curl-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-pod
  namespace: netpol
  labels:
    app: client
spec:
  containers:
    - name: curl 
      image: radial/busyboxplus:curl
      command: ['sh', '-c', 'while true; do sleep 5; done']
