017-network-policies/more/np-namespaceselector-allow.yaml
# this is a block-all podselector policy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-namespaceselector-allow
  namespace: netpol
spec:
  podSelector:
    matchLabels:
      app: web
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          team: web
    ports:
    - protocol: TCP
      port: 80
  egress: []
