017-network-policies/more/np-podselector-blockall.yaml
# this is a block-all podselector policy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-podselector-blockall
  namespace: netpol
spec:
  podSelector:
    matchLabels:
      app: web
  policyTypes:
  - Ingress
  - Egress
